--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-    "name": "Zaid Vc Player",
+    "name": "Ribaj Vc Player",
     "description": "Music allow you to stream music trought the telegram voice chat feature.",
     "keywords": ["Zaid", "Veez Music", "music", "voice chat", "telegram", "Yukki", "Yukki Music", "Private Music"],
     "repository": "https://github.com/Teamosmani/ribaj",
@@ -12,37 +12,37 @@
         "OWNER_ID": {
             "description": "fill with your telegram id as the owner of the bot",
             "required": true,
-            "value": "1669178360"
+            "value": "1008271006"
         },
         "ASS_ID": {
             "description": "fill with telegram id of account",
             "required": true,
-            "value": "1904094450"
+            "value": "2135127882"
         },
         "LOG_GROUP_ID": {
             "description": "Add @Zaid2_robot and type /id to get ur chat id",
             "required": true,
-            "value": "Fill There Ur Private/Channel Id Make sure start with -100"
+            "value": "-1001150107625"
         },
         "API_ID": {
             "description": "your Api ID from my.telegram.org/apps",
             "required": true,
-            "value": "6435225"
+            "value": "14547608"
         },
         "API_HASH": {
             "description": "your Api Hash from my.telegram.org/apps",
             "required": false,
-            "value": "4e984ea35f854762dcde906dce426c2d"
+            "value": "c6c5e34f44bc5dd80dd2a4b894c7bcff"
         },
         "ZAID_SUPPORT": {
             "description": "Ur Support Group Username",
             "required": false,
-            "value": "Superior_Support"
+            "value": "osmanigroupbot"
         },
         "UPDATES_CHANNEL": {
             "description": "Ur Updates Channel",
             "required": false,
-            "value": "Superior_bots"
+            "value": "teamosmani"
         },
         "SUDO_USERS": {
             "description": "fill with the user id who can access all function in your bot (separate with space).",
@@ -62,7 +62,7 @@
         "MONGO_DB_URI": {
             "description": "fill with the mongodb url get from mongodb.cloud.com (don't use mine below !)",
             "required": true,
-            "value": "mongodb+srv://music:music@cluster0.sh6h4.mongodb.net/myFirstDatabase?retryWrites=true&w=majority"
+            "value": "mongodb+srv://Osmanibots:osmani@cluster0.p6dor.mongodb.net/myFirstDatabase?retryWrites=true&w=majority"
         }
     },
   "buildpacks": [
